compiler/tests/en/errors/toplevel_typedef_after_func.salam
// EXPECT: E087
func helper: ret 1 end

struct P:
    x: int = 0
end

func main: end
